--- a/Task3/home-page.html
+++ b/Task3/home-page.html
@@ -43,7 +43,11 @@
         <button onclick="window.location.href='by-keywords.html'">Go to Articals by keywords</button>
         <button onclick="window.location.href='top-classes.html'">Go to Articals by top classes</button>
         <button onclick="window.location.href='articals-by-title-length.html'">Go to articals by length</button>
-    </div>
+        <button onclick="window.location.href='by-covareg.html'">Go to articals by coverage</button>
+        <button onclick="window.location.href='Articles with More than count Words.html'">Articles with More than count Words</button>
+        <button onclick="window.location.href='Articles by Specific Date.html'">Articles by Specific Date</button>
+        <button onclick="window.location.href='Most Popular Keywords in the Last X Days.html'">Most Popular Keywords in the Last X Days</button>
 
+    </div>
 </body>
 </html>
