--- a/Task3/home-page.html
+++ b/Task3/home-page.html
@@ -64,30 +64,31 @@
     </style>
 </head>
 <body>
-        <h1>Welcome to the Homepage</h1>
+        <h1>Welcome to the Almayadeen Data Charts</h1>
 
            <nav class="navbar">
-        <!-- Button aligned to the right -->
-      <button onclick="window.location.href='../charts-for-task-4/home-page-trend.html'">Trending</button>
+    <!-- Button for the dashboard -->
+    <button onclick="window.open('../charts-for-task-4/dashboard.html', '_blank')">Dashboard</button>
+    <!-- Existing buttons -->
+    <button onclick="window.open('../charts-for-task-4/home-page-trend.html', '_blank')">Trending</button>
+</nav>
 
+   <div class="button-container">
+    <button onclick="window.open('top-keywords.html', '_blank')">Go to top-keywords</button>
+    <button onclick="window.open('top_authors.html', '_blank')">Go to top_authors</button>
+    <button onclick="window.open('by-date.html', '_blank')">Go to Articles by date</button>
+    <button onclick="window.open('by-word-count.html', '_blank')">Go to word-count</button>
+    <button onclick="window.open('by-language.html', '_blank')">Go to Articles by language</button>
+    <button onclick="window.open('by-Category.html', '_blank')">Go to Articles by Category</button>
+    <button onclick="window.open('by-keywords.html', '_blank')">Go to Articles by keywords</button>
+    <button onclick="window.open('articles_by_classes.html', '_blank')">Go to Articles by classes</button>
+    <button onclick="window.open('top-classes.html', '_blank')">Go to Articles by top classes</button>
+    <button onclick="window.open('articals-by-title-length.html', '_blank')">Go to articles by length</button>
+    <button onclick="window.open('by-covareg.html', '_blank')">Go to articles by coverage</button>
+    <button onclick="window.open('Articles with More than count Words.html', '_blank')">Articles with More than count Words</button>
+    <button onclick="window.open('Articles by Specific Date.html', '_blank')">Articles by Specific Date</button>
+    <button onclick="window.open('Most Popular Keywords in the Last X Days.html', '_blank')">Most Popular Keywords in the Last X Days</button>
+</div>
 
-    </nav>
-
-    <div class="button-container">
-        <button onclick="window.location.href='top-keywords.html'">Go to top-keywords </button>
-        <button onclick="window.location.href='top_authors.html'">Go to top_authors </button>
-        <button onclick="window.location.href='by-date.html'">Go to Articals by date</button>
-        <button onclick="window.location.href='by-word-count.html'">Go to word-count</button>
-        <button onclick="window.location.href='by-language.html'">Go to Articals by language </button>
-        <button onclick="window.location.href='by-Category.html'">Go to Articals by Category </button>
-        <button onclick="window.location.href='by-keywords.html'">Go to Articals by keywords</button>
-        <button onclick="window.location.href='articles_by_classes.html'">Go to Articals by classes</button>
-        <button onclick="window.location.href='top-classes.html'">Go to Articals by top classes</button>
-        <button onclick="window.location.href='articals-by-title-length.html'">Go to articals by length</button>
-        <button onclick="window.location.href='by-covareg.html'">Go to articals by coverage</button>
-        <button onclick="window.location.href='Articles with More than count Words.html'">Articles with More than count Words</button>
-        <button onclick="window.location.href='Articles by Specific Date.html'">Articles by Specific Date</button>
-        <button onclick="window.location.href='Most Popular Keywords in the Last X Days.html'">Most Popular Keywords in the Last X Days</button>
-    </div>
 </body>
 </html>
