--- a/charts-for-task-4/home-page-trend.html
+++ b/charts-for-task-4/home-page-trend.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Top Trending</title>
 <style>
      body {
             font-family: Arial, sans-serif;
@@ -31,11 +31,12 @@
 </head>
 <body>
 <div class="button-container">
-    <button onclick="window.location.href='sentmint-trend.html'">Go to sentmint-trend</button>
-    <button onclick="window.location.href='keywords-trend.html'">Go to keywords-trend</button>
-    <button onclick="window.location.href='most-negative-articals.html'">Go to most-negative-articals</button>
-    <button onclick="window.location.href='most-positive-articals.html'">Go to most-positive-articals</button>
+    <button onclick="window.open('sentmint-trend.html', '_blank')">Go to sentmint-trend</button>
+    <button onclick="window.open('keywords-trend.html', '_blank')">Go to keywords-trend</button>
+    <button onclick="window.open('most-negative-articals.html', '_blank')">Go to most-negative-articals</button>
+    <button onclick="window.open('most-positive-articals.html', '_blank')">Go to most-positive-articals</button>
 </div>
+
 
 </body>
 </html>
