--- a/charts-for-task-4/dashboard.html
+++ b/charts-for-task-4/dashboard.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="chart-item">
-            <h3>Top Keywords</h3>
+            <h3>articles_by_word_count</h3>
             <div id="chartdiv4"></div>
         </div>
     </div>
